cmake_minimum_required(VERSION 3.17)

project(advent_of_code_2020)

set(CMAKE_CXX_STANDARD 17)

add_executable(day1-1 day1-1.cpp)
add_executable(day1-2 day1-2.cpp)
add_executable(day2-1 day2-1.cpp)
add_executable(day2-2 day2-2.cpp)
add_executable(day3-1 day3-1.cpp)
add_executable(day3-2 day3-2.cpp)
add_executable(day4-1 day4-1.cpp)
add_executable(day4-2 day4-2.cpp)
add_executable(day5-1 day5-1.cpp)
add_executable(day5-2 day5-2.cpp)
add_executable(day6-1 day6-1.cpp)
add_executable(day6-2 day6-2.cpp)
